--- a/src/_data/xw.yaml
+++ b/src/_data/xw.yaml
@@ -3,15 +3,22 @@
     - Adam Wagner
     - Rebecca Goldstein
   published: 2025/06/15
-  themed?: true
-  revealer: INSIDE OUT AND BACKWARDS
-  theme_set:
+  favorite_clues:
+    - clue: What a flipping tool!
+      answer: SPATULA
     - clue: Device used to clear out nasal passages / Final part of a radio countdown
-      answer: NETIPOT
-      grid: I is circled
+      answer: NET(I)POT
     - clue: Brunch entrees / Figure with an eponymous fire
-      answer: OMELETS
-      grid: E is circled
+      answer: OM(E)LETS
     - clue: Genetic repositories / Reel Big Fish or Sublime
-      answer: DNABANKS
-      grid: N is circled
+      answer: DNABA(N)KS
+    - clue: Hit 1981 German-language film / "What a shame!"
+      answer: DA(S)BOOT
+    - clue: Women abroad / Wrapped garments
+      answer: S(I)GNORAS
+    - clue: Comparatively upper-crust, in a way / Wood cutter
+      answer: WASPI(E)R
+    - clue: How a shirt might be put on in a rush ... or a hint to this puzzle's theme
+      answer: INSIDE OUT AND BACKWARDS
+    - clue: University whose name sounds like a kind of highway
+      answer: TULANE
