--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "description": "",
   "dependencies": {
     "@11ty/eleventy": "^3.1.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
+    "postcss": "^8.5.6"
   }
 }
