--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@11ty/eleventy": "^3.1.0"
+    "@11ty/eleventy": "^3.1.0",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
     "postcss": "^8.5.6"
-  }
+  },
+  "type": "module"
 }
