--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": ".eleventy.js",
   "scripts": {
     "build": "npx eleventy",
+    "build:clean": "rm -rf _site && npx eleventy",
     "debug": "DEBUG=* npx eleventy",
     "start": "npx eleventy --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
