--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
-    "postcss": "^8.5.6"
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.1"
   },
   "type": "module"
 }
