--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "npx eleventy",
     "build:clean": "rm -rf _site && npx eleventy",
     "debug": "DEBUG=* npx eleventy",
+    "format": "node scripts/format-html.js",
     "start": "npx eleventy --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
