--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "home2",
+  "name": "home",
   "version": "1.0.0",
   "main": ".eleventy.js",
   "scripts": {
@@ -7,8 +7,7 @@
     "build:clean": "rm -rf _site && npx eleventy",
     "debug": "DEBUG=* npx eleventy",
     "format": "node scripts/format-html.js",
-    "start": "npx eleventy --serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx eleventy --serve --incremental"
   },
   "keywords": [],
   "author": "",
