--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "npx eleventy",
     "build:clean": "rm -rf _site && npx eleventy",
+    "build:format": "npx eleventy && rm _site/assets/favicon-dev.ico && node scripts/format-html.js",
     "debug": "DEBUG=* npx eleventy",
     "format": "rm _site/assets/favicon-dev.ico && node scripts/format-html.js",
     "start": "npx eleventy --serve --incremental"
