--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:format": "npx eleventy && rm _site/assets/favicon-dev.ico && node scripts/format-html.js",
     "debug": "DEBUG=* npx eleventy",
     "format": "rm _site/assets/favicon-dev.ico && node scripts/format-html.js",
-    "start": "npx eleventy --serve --incremental"
+    "start": "npx eleventy --serve"
   },
   "keywords": [],
   "author": "",
