--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
+    "@11ty/eleventy-img": "^6.0.4",
     "@tailwindcss/postcss": "^4.1.10",
     "postcss": "^8.5.6",
     "prettier": "^3.6.1"
