--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@11ty/eleventy": "^3.1.0",
-    "tailwindcss": "^4.1.10"
+    "@11ty/eleventy": "^3.1.0"
   },
   "devDependencies": {
     "@11ty/eleventy-img": "^6.0.4",
-    "@tailwindcss/postcss": "^4.1.10",
-    "postcss": "^8.5.6",
     "prettier": "^3.6.1"
   },
   "type": "module"
