trying to untangle some of my mess

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "build": "npx eleventy",
     "build:clean": "rm -rf _site && npx eleventy",
-    "build:format": "npx eleventy && node scripts/format-html.js",
+    "build:format": "npx eleventy && node utils/format-html.js",
     "debug": "DEBUG=* npx eleventy",
-    "format": "node scripts/format-html.js",
+    "format": "node utils/format-html.js",
     "start": "npx eleventy --serve",
-    "sort:links": "node scripts/sort.js ./src/_data/links.json"
+    "sort:links": "node utils/sort.js ./src/_data/links.json"
   },
   "keywords": [],
   "author": "",
