--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@11ty/eleventy": "^3.1.0"
+    "@11ty/eleventy": "^3.1.0",
+    "@11ty/eleventy-plugin-webc": "^0.4.0"
   },
   "devDependencies": {
     "@11ty/eleventy-img": "^6.0.4",
