--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@11ty/eleventy": "^3.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.1"
   },
   "type": "module"
