re-adding skeleton, base content, styling

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@11ty/eleventy": "^3.1.0"
+    "@11ty/eleventy": "^3.1.0",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
