--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
+    "js-yaml": "^4.1.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.1"
   },
