add now update with styling

--- a/src/_data/now.yaml
+++ b/src/_data/now.yaml
@@ -1,21 +1,21 @@
 - date: 2025-09-24
   content:
-    - re-doing my website (again)
-    - watching s1 of The Studio
+    - re-designing my website again
+    - watching season 1 of the studio
     - blogging on leaflet.pub
 - date: 2025-08-21
   content:
-    - back home in CA
+    - back home in california
     - trying to inject a little more structure in my day-to-day life
     - getting over a nasty cough :/
-    - catching up on NWSL matches I missed while I was away
+    - catching up on nwsl matches i missed while i was away
 - date: 2025-08-01
   content:
-    - catching up on Jeopardy! episodes
+    - catching up on jeopardy! episodes
     - working on making my sites more responsive
-    - getting ready to leave for PA on Monday https://twelvefourseven.net/countdown
+    - getting ready to leave for pennsylvania on Monday https://twelvefourseven.net/countdown
 - date: 2025-07-23
   content:
     - working on this website
     - figuring out some health stuff
-    - listening to Lorde's new album
+    - listening to lorde's new album
