tweak styling, clean up readme, update config

--- a/src/_data/now.yaml
+++ b/src/_data/now.yaml
@@ -1,6 +1,6 @@
 - date: 2025-09-24
   content:
-    - re-designing my website again
+    - re-designing this website
     - watching season 1 of the studio
     - blogging on leaflet.pub
 - date: 2025-08-21
@@ -13,7 +13,7 @@
   content:
     - catching up on jeopardy! episodes
     - working on making my sites more responsive
-    - getting ready to leave for pennsylvania on Monday https://twelvefourseven.net/countdown
+    - getting ready to leave for pennsylvania on monday
 - date: 2025-07-23
   content:
     - working on this website
