got timezones figured out for countdown

--- a/src/_data/countdown.yaml
+++ b/src/_data/countdown.yaml
@@ -1,6 +1,6 @@
-- date: 2025-10-15
-  time-pst: 10:04
-  reason: I arrive in PA for bday visit
-- date: 2025-08-04
-  time-pst: 17:27
-  reason: I arrive in PA for 2 week visit
+- date: 2025-10-15T14:05:00.000Z
+  for: I arrive in PA for bday visit
+  fmtd: Wed Oct 15 2025 07:05:00 GMT-0700 (Pacific Daylight Time)
+- date: 2025-08-05T00:27:00Z
+  for: I arrive in PA for 2 week visit
+  fmtd: 'Mon Aug 04 2025 17:27:00 GMT-0700 (Pacific Daylight Time)'
