finish index page for now

--- a/src/_data/elsewhere.yaml
+++ b/src/_data/elsewhere.yaml
@@ -8,3 +8,5 @@
   location: https://www.puzzmo.com/user/fx/whitwaltman
 - place: are.na
   location: https://www.are.na/whit-waltman/index
+- place: github
+  location: https://github.com/whitwaltman
