--- a/src/_data/now.yaml
+++ b/src/_data/now.yaml
@@ -1,3 +1,8 @@
+- date: 2025-10-20
+  content:
+    - back from a short bday visit to pennsylvania
+    - getting back into word games + trivia/jeopardy!
+    - making little prototypes and interactive demos
 - date: 2025-09-24
   content:
     - re-designing this website
