--- a/src/_data/countdown.yaml
+++ b/src/_data/countdown.yaml
@@ -1,6 +1,9 @@
+- when: 2025-12-06T14:45:00.000Z
+  what: I arrive in PA for an early xmas trip
+  fmtd: Sat Dec 06 2025 06:45:00 GMT-0800 (Pacific Standard Time)
 - when: 2025-10-15T14:05:00.000Z
-  what: I arrive in PA for bday visit
+  what: I arrive in PA for a bday visit
   fmtd: Wed Oct 15 2025 07:05:00 GMT-0700 (Pacific Daylight Time)
 - when: 2025-08-05T00:27:00Z
-  what: I arrive in PA for 2 week visit
+  what: I arrive in PA for a 2 week visit
   fmtd: 'Mon Aug 04 2025 17:27:00 GMT-0700 (Pacific Daylight Time)'
