add comments to eleventy config

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
+    "@11ty/eleventy-img": "^6.0.4",
     "@tailwindcss/postcss": "^4.1.13",
     "js-yaml": "^4.1.0",
     "postcss": "^8.5.6",
