add img of myself, edit index copy, configure image transform

--- a/src/_data/now.yaml
+++ b/src/_data/now.yaml
@@ -1,25 +1,25 @@
-- date: 2025-10-20
+- date: 2025-10-20T12:00:00
   content:
     - back from a short bday visit to pennsylvania
     - getting back into word games + trivia/jeopardy!
     - making little prototypes and interactive demos
-- date: 2025-09-24
+- date: 2025-09-24T12:00:00
   content:
     - re-designing this website
     - watching season 1 of the studio
     - blogging on leaflet.pub
-- date: 2025-08-21
+- date: 2025-08-21T12:00:00
   content:
     - back home in california
     - trying to inject a little more structure in my day-to-day life
     - getting over a nasty cough :/
     - catching up on nwsl matches i missed while i was away
-- date: 2025-08-01
+- date: 2025-08-01T12:00:00
   content:
     - catching up on jeopardy! episodes
     - working on making my sites more responsive
     - getting ready to leave for pennsylvania on monday
-- date: 2025-07-23
+- date: 2025-07-23T12:00:00
   content:
     - working on this website
     - figuring out some health stuff
