--- a/src/_data/now.yaml
+++ b/src/_data/now.yaml
@@ -1,3 +1,8 @@
+- date: 2025-12-23T12:00:00
+  content:
+    - been writing a lot of ruby code
+    - am super behind on jeopardy :(
+    - got all my xmas shopping done (finally)
 - date: 2025-10-20T12:00:00
   content:
     - back from a short bday visit to pennsylvania
