update countdown, add to readme

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": ".eleventy.js",
   "scripts": {
     "build": "npx eleventy",
-    "build:clean": "rm -rf _site && npx eleventy",
-    "build:format": "npx eleventy && node utils/format.js",
+    "build:all": "rm -rf _site && npx eleventy && node utils/format.js",
     "debug": "DEBUG=* npx eleventy",
     "format": "node utils/format.js",
     "start": "npx eleventy --serve"
