--- a/src/_data/countdown.yaml
+++ b/src/_data/countdown.yaml
@@ -1,3 +1,6 @@
+- when: 2026-02-04T15:27:00.000Z
+  what: I arrive in PA for an early valentine's day visit
+  fmtd: Wed Feb 04 2026 07:27:00 GMT-0800 (Pacific Standard Time)
 - when: 2025-12-06T14:45:00.000Z
   what: I arrive in PA for an early xmas trip
   fmtd: Sat Dec 06 2025 06:45:00 GMT-0800 (Pacific Standard Time)
