--- a/src/_data/now.yaml
+++ b/src/_data/now.yaml
@@ -1,3 +1,9 @@
+- date: 2025-12-31T12:00:00
+  content:
+    - exploring dynamic and functional programming
+    - practicing my mandarin / chinglish
+    - trying to set up a small, local web server with an rpi3
+    - slowly migrating some of my websites to cf pages
 - date: 2025-10-20T12:00:00
   content:
     - back from a short bday visit to pennsylvania
