--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "description": "",
   "repository": {
     "type": "git",
-    "url": "git@github.alt:whitwaltman/twelvefourseven.net.git"
+    "origin": "git@github.alt:whitwaltman/twelvefourseven.net.git"
   },
   "dependencies": {
     "@11ty/eleventy": "^3.1.0",
